--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <img src="images/header/twitter.webp" alt="Twitter" />
           </a>
           <a
-            href="https://opensea.io/collections"
+            href="https://opensea.io/collection/angryfans2-for-ukraine"
             target="_blank"
             rel="noopener noreferrer"
           >
@@ -81,7 +81,7 @@
         <h1>AngryFans WorldCup 2022 Coming Soon!</h1>
                
         <p>Qualified Teams collection coming soon!!</p>
-        <a href="https://discord.gg/A9CnsVzzkZ" target="_blank" rel="noopener noreferrer" class="hero-btn btn"
+        <a href="https://discord.gg/cVDJJG8f" target="_blank" rel="noopener noreferrer" class="hero-btn btn"
           ><span>Join the Competition/League</span>
         </a>
       </div>
